# gtk-frdp

./: gtk-frdp.doap  meson.build
examples/: gtk-frdp-viewer.c  gtk-frdp-viewer.vala  meson.build
src/: frdp-channel-clipboard.c  frdp-channel-clipboard.h  frdp-channel-display-control.c  frdp-channel-display-control.h  frdp-channel.c  frdp-channel.h  frdp-channels.c  frdp-channels.h  frdp-context.h  frdp-display.c  frdp-display.h  frdp-session.c  frdp-session.h  gtk-frdp.h  meson.build
